2016-11-22  Georg-Johann Lay  <avr@gjlay.de>

	* c-c++-common/builtin-shuffle-1.c (V): Use 4 * int in vector.

2016-11-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/78439
	* gcc.c-torture/compile/pr78439.c: New test.

2016-11-22  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR target/77904
	* gcc.target/arm/pr77904.c: New test.

2016-11-22  Toma Tabacu  <toma.tabacu@imgtec.com>

	* gcc.target/mips/interrupt_handler-bug-1.c (dg-options): Add
	isa_rev>=2.

2016-11-22  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/78436
	* gcc.c-torture/execute/pr78436.c: New test.

	PR middle-end/78416
	* gcc.dg/torture/pr78416.c: New test.

	PR tree-optimization/78445
	* gcc.dg/pr78445.c: New test.

2016-11-22  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR libgfortran/78449 
	* gfortran.dg/ieee/ieee_8.f90 (aarch64*gnu, arm*gnu*): Mark xfail.

2016-11-21  Jeff Law  <law@redhat.com>

        PR target/68538
	* gcc.c-torture/compile/pr68538.c: New test.

2016-11-21  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/ppc-round2.c: Allow XSCVDPSXWS and XSCVDPUXWS
	to be generated instead of FCTIWUZ or FCTIWZ.

2016-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/67335
	* g++.dg/vect/simd-clone-7.cc: New test.

	PR c++/71973
	* g++.dg/torture/pr53321.C (size_t): Use __SIZE_TYPE__ instead of
	long unsigned int.
	* g++.dg/torture/pr63512.C (::strlen): Use __SIZE_TYPE__ instead of
	unsigned long.

2016-11-20  Jeff Law  <law@redhat.com>

	PR target/25128
	* gcc.target/m68k/pr25128.c: New test.

2016-11-21  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/tree-ssa/tailcall-7.c: New test.

2016-11-21  David Malcolm  <dmalcolm@redhat.com>

	PR preprocessor/78324
	* gcc.dg/plugin/diagnostic-test-string-literals-1.c
	(test_multitoken_macro): New function.
	* gcc.dg/plugin/diagnostic-test-string-literals-3.c: New test
	case.
	* gcc.dg/plugin/diagnostic-test-string-literals-4.c: New test
	case.