@@ -1,3 +1,7 @@
+2016-11-22  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	* gcc.target/arm/pr53447-5.c: Fix test expectations for neon-fpu.
+
 2016-11-22  Georg-Johann Lay  <avr@gjlay.de>
 
 	* c-c++-common/builtin-shuffle-1.c (V): Use 4 * int in vector.
